# crowd-label-py

./: .gitignore  Data_preparation.py  Experiments.py  Experiments_Text_Lang_Anim.py  MANIFEST.in  Makefile  Multi-Winner.py  README.md  Read_me.txt  aggregation_rules.py  pyproject.toml  requirements.txt  ruff.toml  setup.py  utils.py
.github/ISSUE_TEMPLATE/: custom.md
.github/workflows/: main.yml  test.yml
Data/Data_Shah/: data_animals.csv  data_languages.csv  data_textures.csv
Data/Multi_Winner/: data_quiz_foot.csv
crowd_label/: _reproduce_paper_results.py
crowd_label/_evaluation/: accuracy.py
crowd_label/_parsing/: data_preparation.py
crowd_label/aggregation/: aggregators.py
crowd_label/core/aggregation/: aggregators.py  base.py
crowd_label/paper_results/: main.py
crowd_label/paper_results/evaluation/: accuracy.py
crowd_label/paper_results/parsing/: data_preparation.py
crowd_label/utils/: inventory.py  utils.py
data/animals/: annotations.csv  ground_truth.csv
data/countries/: annotations.csv  groundtruth.csv  raw.csv
data/languages/: annotations.csv  groundtruth.csv
data/textures/: annotations.csv  groundtruth.csv
hakeem/aggregation/: base.py
hakeem/aggregation/aggregators/: condorcet.py  mallows.py
hakeem/core/aggregation/: aggregators.py  base.py
hakeem/core/utils/: inventory.py  utils.py
hakeem/paper_results/: inventory.py  main.py
hakeem/paper_results/evaluation/: accuracy.py
hakeem/paper_results/parsing/: data_preparation.py
hakeem/utils/: coerce.py
notebook/: lamsade_exp.ipynb
size_matters/: _reproduce_paper_results.py  aggregation_rules.py  data_preparation.py  experiments.py  inventory.py  main.py  utils.py
size_matters/_parsing/: data_preparation.py
size_matters/aggregation/: aggregators.py
size_matters/evaluation/: accuracy.py
size_matters/parsing/: data_preparation.py
size_matters/utils/: inventory.py
src/: aggregation_rules.py  data_preparation.py  experiments.py  inventory.py  utils.py
src/size_matters/: aggregation_rules.py  data_preparation.py  experiments.py  inventory.py  utils.py
test/src/: test_utils.py
tests/: test_experiments.py  test_utils.py
tests/_evaluation/: test_accuracy.py
tests/_parsing/: test_data_preparation.py
tests/aggregation/: test_aggregators.py  test_base.py
tests/evaluation/: test_accuracy.py
tests/parsing/: test_data_preparation.py
tests/utils/: test_coerce.py  test_utils.py
(+12 files in other folders)
