[project]
name = "hakeem"
version = "0.1.0"
requires-python  = ">= 3.12"
authors = "Tahar Allouche"
description = "Minimalistic collective data labeling tools"
readme = "README.md"
dependencies = [
    "matplotlib>=3.9.2",
    "mypy>=1.13.0",
    "pandas>=2.2.3",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
    "scikit-learn>=1.5.2",
    "tqdm>=4.66.5",
]


[tool.poetry]
name = 'hakeem'
version = '0.0.1'
description = "Minimalistic collective data labeling tools"
authors = [
    "Tahar Allouche <tahar.allouche.pro@gmail.com>",
]
packages = [
    { include = "hakeem" },
]

[tool.poetry.dependencies]
python = '^3.12'

[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'

[tool.pytest.ini_options]
markers = [
    "ut: unit-test",
    "e2e: end-to-end",
]



[tool.uv]
package = true

