[project]
name = "hakeem"
version = "1.0.0"
requires-python  = ">= 3.9"
readme = "README.md"
dependencies = [
    "pandas>=2.2.3",
]


[tool.poetry]
name = 'hakeem'
version = '1.0.0'
description = "Minimalistic collective data labeling tools"
authors = [
    "Tahar Allouche <tahar.allouche.pro@gmail.com>",
]
packages = [
    { include = "hakeem" },
]

[tool.poetry.dependencies]
python = '^3.9'
pandas = '^2.2.3'


[build-system]
requires = ['poetry-core~=1.0']
build-backend = 'poetry.core.masonry.api'


[tool.uv]
package = true
dev-dependencies = [
    "mypy>=1.13.0",
    "pytest>=8.3.3",
    "ruff>=0.7.1",
]

[tool.pytest.ini_options]
markers = [
    "ut: unit-test",
    "e2e: end-to-end",
]

